; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_amp.c_accept_phylink_complete.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_amp.c_accept_phylink_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_dev = type { i32 }
%struct.hci_cp_accept_phy_link = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"%s status 0x%2.2x\00", align 1
@HCI_OP_ACCEPT_PHY_LINK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hci_dev*, i64, i32)* @accept_phylink_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @accept_phylink_complete(%struct.hci_dev* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.hci_dev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.hci_cp_accept_phy_link*, align 8
  store %struct.hci_dev* %0, %struct.hci_dev** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %9 = getelementptr inbounds %struct.hci_dev, %struct.hci_dev* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @BT_DBG(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %10, i64 %11)
  %13 = load i64, i64* %5, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %29

16:                                               ; preds = %3
  %17 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %18 = load i32, i32* @HCI_OP_ACCEPT_PHY_LINK, align 4
  %19 = call %struct.hci_cp_accept_phy_link* @hci_sent_cmd_data(%struct.hci_dev* %17, i32 %18)
  store %struct.hci_cp_accept_phy_link* %19, %struct.hci_cp_accept_phy_link** %7, align 8
  %20 = load %struct.hci_cp_accept_phy_link*, %struct.hci_cp_accept_phy_link** %7, align 8
  %21 = icmp ne %struct.hci_cp_accept_phy_link* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %16
  br label %29

23:                                               ; preds = %16
  %24 = load %struct.hci_dev*, %struct.hci_dev** %4, align 8
  %25 = load %struct.hci_cp_accept_phy_link*, %struct.hci_cp_accept_phy_link** %7, align 8
  %26 = getelementptr inbounds %struct.hci_cp_accept_phy_link, %struct.hci_cp_accept_phy_link* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @amp_write_remote_assoc(%struct.hci_dev* %24, i32 %27)
  br label %29

29:                                               ; preds = %23, %22, %15
  ret void
}

declare dso_local i32 @BT_DBG(i8*, i32, i64) #1

declare dso_local %struct.hci_cp_accept_phy_link* @hci_sent_cmd_data(%struct.hci_dev*, i32) #1

declare dso_local i32 @amp_write_remote_assoc(%struct.hci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
